# magic_helper_backend

./: .dockerignore  .env.example  .gitignore  ENVFILES.md  Makefile  README.md  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 3fc3638bd0ed_init.py  6c381e32c4ff_.py  86601c8da174_.py  a4c31f6e455c_.py  a51234924fb3_.py
app/: __init__.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  moderator.py
app/core/: config.py  constants.py  requests.py  security.py
app/crud/: __init__.py  base.py  crud_moderator.py  crud_token.py
app/db/: base.py  session.py
app/models/: moderator.py  token.py
app/schemas/: __init__.py  auth.py  moderator.py  token.py
app/schemas/responses/: base.py  error.py  vk.py
app/services/: vk.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml
docker/api/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
