[tool.poetry]
name = "magic_helper_backend"
version = "0.1.0"
description = ""
authors = ["MaHryCT3 <mahryct123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
pydantic = "^1.9.2"
fastapi = {extras = ["all"], version = "^0.80.0"}
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
