[tool.poetry]
name = "magic_helper_backend"
version = "0.1.0"
description = ""
authors = ["MaHryCT3 <mahryct123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
pydantic = "^1.9.2"
fastapi = {extras = ["all"], version = "^0.80.0"}
loguru = "^0.6.0"
asyncpg = "^0.26.0"
python-dotenv = "^0.20.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.1.2"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
